fix horizontal scroll on mobile 3

--- a/_sass/elementaire/_layout.scss
+++ b/_sass/elementaire/_layout.scss
@@ -2,8 +2,8 @@
  * Site header
  */
 
-.site-header {
-  overflow: hidden;
+.body-wrapper {
+  overflow-x: hidden;
 }
 
 .site-header {
